@@ -106,6 +106,7 @@ Version 2.3.0 - The river knows.
 		* Configure option --enable-fileview
 		* Bypass amulegui connection dialog with switch -s / --skip
 		* Fixed Core Timer
+		* Allow passing of ED2K links by command line to amule and amuled, making ed2k program obsolete
 
 	Vollstrecker:
 		* Unify copyright lines
